--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <a href="#" class="btn btn-primary">
-            <img src="/images/icon-cart.svg" alt="Icono de carrito">
+            <img src="../images/icon-cart.svg" alt="Icono de carrito">
             Add to Cart
           </a>
 
